# ggmlSergio

examples/: CMakeLists.txt
examples/benchmarks/: CMakeLists.txt  benchmark_correcteness.c  benchmark_time_f32.c  benchmark_time_f32_iterations.c  funcion.c
src/: ggml.c
